Fixed: .side-bar @media and .overflow

--- a/css/media-query.css
+++ b/css/media-query.css
@@ -15,7 +15,8 @@
     /* .side-bar */
 
     .side-bar{
-        display: block;
+        display: flex;
+        flex-direction: column;
     }
 }
 
